changed the logic of the search use case where it now takes inout from a search bar and saerches for events related to the query